[gd_scene load_steps=3 format=3 uid="uid://colrqteefvben"]

[ext_resource type="Script" path="res://Trade/Script/TradeUI/goods_list_item.gd" id="1_04p4h"]
[ext_resource type="Texture2D" uid="uid://dgbe8puaplb6m" path="res://icon.svg" id="1_u24qo"]

[node name="GoodsListItem" type="PanelContainer"]
custom_minimum_size = Vector2(0, 100)
offset_right = 15.0
offset_bottom = 10.0
size_flags_horizontal = 3
script = ExtResource("1_04p4h")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="IconRect" type="TextureRect" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("1_u24qo")
expand_mode = 3

[node name="ItemDataText" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "物品名称
当前单价:1
指导单价:1
数量:0
"

[node name="ReferenceRect" type="ReferenceRect" parent="."]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="gui_input" from="ReferenceRect" to="." method="_on_reference_rect_gui_input"]
